@@ -165,13 +165,17 @@ sub make_page
 			email=>$session->make_text( $v->{email} ),
 			username=>$session->make_text( $v->{username} ) ) );
 
+	my $maxdelta = EPrints::Utils::human_delay(
+		$session->get_repository->get_conf( "pin_timeout" ) );
+
 	# If email fails then we should abort
 	my $rc = $user->mail( 
 		"cgi/register:account",
 		$session->html_phrase( 
 			"mail_password_pin", 
 			confirmurl => $session->render_link( $session->get_repository->get_conf( "perl_url" )."/confirm?userid=".$user->get_value( "userid" )."&pin=".$pin ),
-			username => $user->render_value( "username" ) ) );
+			username => $user->render_value( "username" ),
+			maxdelta => $session->make_text( $maxdelta ) ) );
 
 	if( !$rc )
 	{
