@@ -5420,3 +5420,11 @@ PACKAGE: 2.2.99.2
  * Removed 10_core.pl, database.pl, and archive_name.xml from the repository 
     - they are created by epadmin, and otherwise get in the way when making 
     commits.
+
+2006-11-15 moj
+ * Create human_delay in EPrints::Utils. This is similar to human_filesize, and
+    returns a string in the form 'N hour(s)', 'N day(s)', or 'N week(s)'. It
+    is not meant to be accurate (e.g. it doesn't say '3 days and 2 hours').
+ * The registration mail now says how long the user has to confirm registration.
+ * The reject email now has a link to the edit page.
+ * Tidied up Reject/Remove a little.
